// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el archivo GiftExpertApp Debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en el archivo GiftExpertApp debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Lizards"
      key="Lizards"
    />
    <GifGrid
      category="Birds"
      key="Birds"
    />
  </ol>
</Fragment>
`;
